# chabbo

./: .gitignore  .spaceignore  Cargo.toml  Discovery.md  LICENSE-APACHE  LICENSE-MIT  README.md  Spacefile  dorian_gray.txt  justfile
scripts/: gutenberg_to_corpus.sh  helpers.sh  messenger_to_corpus.sh  telegram_to_corpus.sh
src/: lib.rs  main.rs
src/backends/: deta.rs  ephemeral.rs  local.rs  mod.rs
static/: corpus.html  index.html
