[package]
name = "chabbo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.9", features = ["multipart"] }
# Custom version of deta_rs that swaps out reqwest for ureq
deta_rs = { git = "https://github.com/wonderfulspam/deta-rust"}
directories = "4.0.1"
envy = "0.4.2"
markov = "1.1.0"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
